fix: Add spacing for list selection

--- a/src/_listDefinitions.scss
+++ b/src/_listDefinitions.scss
@@ -34,6 +34,7 @@ $fd-list-byline-form-item-label-top-offset: 0.375rem !default;
 
 $fd-list-selection-container-width: 2.75rem !default;
 $fd-list-selection-container-compact-width: 2rem !default;
+$fd-list-selection-form-item-compact-left-offset: 0.375rem !default;
 
 $fd-list-navigation-indicator-width: 2.5rem !default;
 $fd-list-navigation-navigator-bar-right: inset -0.1875rem 0 0 0 var(--sapSelectedColor);
